Add test with readl ISO Image file + bugfix.